--- a/src/main/resources/jmeter/saveservice.properties
+++ b/src/main/resources/jmeter/saveservice.properties
@@ -137,6 +137,9 @@ DNSCachePanel=org.apache.jmeter.protocol.http.gui.DNSCachePanel
 DurationAssertion=org.apache.jmeter.assertions.DurationAssertion
 DurationAssertionGui=org.apache.jmeter.assertions.gui.DurationAssertionGui
 PreciseThroughputTimer=org.apache.jmeter.timers.poissonarrivals.PreciseThroughputTimer
+OpenModelThreadGroup=org.apache.jmeter.threads.openmodel.OpenModelThreadGroup
+OpenModelThreadGroupController=org.apache.jmeter.threads.openmodel.OpenModelThreadGroupController
+OpenModelThreadGroupGui=org.apache.jmeter.threads.openmodel.gui.OpenModelThreadGroupGui
 # Should really have been defined as floatProp to agree with other properties
 # No point changing this now
 FloatProperty=org.apache.jmeter.testelement.property.FloatProperty
@@ -150,6 +153,7 @@ GaussianRandomTimerGui=org.apache.jmeter.timers.gui.GaussianRandomTimerGui
 GenericController=org.apache.jmeter.control.GenericController
 GraphAccumVisualizer=org.apache.jmeter.visualizers.GraphAccumVisualizer
 GraphVisualizer=org.apache.jmeter.visualizers.GraphVisualizer
+GraphQLHTTPSamplerGui=org.apache.jmeter.protocol.http.control.gui.GraphQLHTTPSamplerGui
 Header=org.apache.jmeter.protocol.http.control.Header
 HeaderManager=org.apache.jmeter.protocol.http.control.HeaderManager
 HeaderPanel=org.apache.jmeter.protocol.http.gui.HeaderPanel
